# anIsland

./: ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  README.md  glad.c  main.cpp  main_new.cpp
assets/shaders/: building.frag  building.vert  depth.frag  fade.frag  grass.frag  grass.vert  particle.frag  particle.vert  person.frag  person.vert  rain.frag  rain.vert  skybox.frag  skybox.vert  splash.frag  splash.vert  terrain.frag  terrain.vert  tree.frag  tree.vert  water.frag  water.vert
book-chapter/: 0_abstract.md  10_design_patterns.md  11_results.md  12_conclusion.md  1_introduction.md  2_objectives.md  3_architecture_overview.md  4_terrain_system.md  5_instanced_rendering.md  5a_trees.md  5b_grass.md  5c_buildings.md  6_environmental_systems.md  6a_water.md  6b_particles.md  6c_rain_splash.md  7_lighting_shadows.md  8_shader_systems.md  9_optimization.md
include/: BuildingSystem.h  Camera.h  CinematicCamera.h  CinematicController.h  CinematicSystem.h  ColonySystem.h  GrassSystem.h  LightingSystem.h  NPCSystem.h  NoiseMap.h  ParticleSystem.h  RainSystem.h  Shader.h  SplashSystem.h  Terrain.h  TreeSystem.h  WaterSystem.h
include/glad/: glad.h
src/: BuildingSystem.cpp  Camera.cpp  CinematicCamera.cpp  CinematicController.cpp  CinematicSystem.cpp  ColonySystem.cpp  GrassSystem.cpp  LightingSystem.cpp  NPCSystem.cpp  NoiseMap.cpp  ParticleSystem.cpp  RainSystem.cpp  Shader.cpp  SplashSystem.cpp  Terrain.cpp  TreeSystem.cpp  WaterSystem.cpp
